--- a/React-frontend/src/index.css
+++ b/React-frontend/src/index.css
@@ -13,13 +13,13 @@ code {
 }
 
 .sidebar-container {
-  min-height: 100vh;
   width: 200px;
   background-color: gray;
 }
 
 .sidebar {
   width: 200px;
+  height: 900px;
   padding-top:25px;
 }
 
