Update app.js, axios.js, index.js and theme.js

--- a/React-frontend/src/index.css
+++ b/React-frontend/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+body::-webkit-scrollbar{
+  display: none;
+}
+
 .sidebar-container {
   width: 200px;
   background-color: gray;
